--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "nuxt": "^3.8.2",
-    "vue": "^3.3.10",
-    "vue-router": "^4.2.5"
-  }
+    "name": "nuxt-app",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare",
+        "lint": "eslint --ext .js,.ts,.vue ."
+    },
+    "devDependencies": {
+        "@nuxt/devtools": "latest",
+        "@rushstack/eslint-patch": "^1.6.0",
+        "@unocss/nuxt": "^0.58.0",
+        "@vue/eslint-config-prettier": "^8.0.0",
+        "@vue/eslint-config-typescript": "^12.0.0",
+        "eslint": "^8.55.0",
+        "eslint-plugin-nuxt": "^4.0.0",
+        "eslint-plugin-vue": "^9.19.2",
+        "nuxt": "^3.8.2",
+        "sass": "^1.69.5",
+        "typescript": "^5.3.3",
+        "vue": "^3.3.10",
+        "vue-eslint-parser": "^9.3.2",
+        "vue-router": "^4.2.5"
+    }
 }
